# interview

./: .gitignore  Unreal Learning.docx  assemble.docx  interview.docx
CppProjects/SoftRenderer/: CMakeLists.txt  prompts.txt
CppProjects/SoftRenderer/src/: camera.cpp  camera.h  main.cpp  object.h  rasterizer.cpp  rasterizer.h
CppProjects/SoftRenderer/src/rasterizer_algothrims/: rasterizer_draw_line.cpp  rasterizer_draw_triangle.cpp
MyDocuments/: AABB碰撞检测以及BVH.docx  marked资源.docx  normal map 以及 height map.docx  ray marching.docx  ssao.docx  场景灵感.docx  旋转问题(欧拉，外旋内旋，四元数).docx  线段树.docx  阴影映射.docx
MyDocuments/AirPlane/: structure.md
MyDocuments/D3D/: temp_file.md  初始化.docx  初始化.md  渲染流水线.md  绘制几何体.md  额外的链接.md
MyDocuments/Madness/: OpenWorld.md
MyDocuments/SoftRenderer/: MVP矩阵推导.md  Readme.md  快速推导旋转.md
MyDocuments/内存相关/: 操作系统的内存管理.docx
MyDocuments/理论计算机/: lecture.docx
MyDocuments/网络/: crc检错.docx  lock_step.docx  浮点数的确定性.docx  纠错码.docx
TestProject/: P4VProjectManager.py
TestProject/P4VProjectManager/: P4VProjectManager.py  README.md  config.json
TestProject/P4VProjectManager/Prompts/: P4VProjectManager.txt
TestProject/P4VProjectManager/TestFiles/: config.json  temp
TestProject/P4VProjectManager/TestFiles/Project_1/: _monitor_ProjectA.bat  build.bat
TestProject/P4VProjectManager/TestFiles/Project_2/: _command_ProjectB.txt  _monitor_ProjectB.bat  postbuild.bat
TestProject/TestFiles/P4VProjectManager/: config.json  temp
TestProject/TestFiles/P4VProjectManager/Project_2/: compile.bat  package.bat  prebuild.bat  test.bat
TinyProjects/: AvoidCars.py
